@@ -12,5 +12,12 @@ export LLVM_ROOT=/home/$USER/emsdk/upstream/bin
 # currently silences sigaltstack undefined symbol (why?)
 # export HB_USER_LDFLAGS="-s ERROR_ON_UNDEFINED_SYMBOLS=0"
 
-$HB_HOST_BIN/hbmk2 -gtnul hbdemo.hbp -ohbdemo2.html -ldflag="--shell-file ./sokol/shell.html -sASSERTIONS=0 -sMALLOC=emmalloc --closure 1"
-$HB_HOST_BIN/hbmk2 -gtnul cdemo.hbp -ocdemo.html -ldflag="--shell-file ./sokol/shell.html -sASSERTIONS=0 -sMALLOC=emmalloc --closure 1"
+if [$(IMGUI_DOCKING) -ne '']
+then
+   $HB_HOST_BIN/hbmk2 $* meta-rebuild-docking.hbp
+else
+   $HB_HOST_BIN/hbmk2 $* meta-rebuild.hbp
+fi
+
+$HB_HOST_BIN/hbmk2 $* -gtnul hbdemo.hbp -ohbdemo2.html -ldflag="--shell-file ./sokol/shell.html -sASSERTIONS=0 -sMALLOC=emmalloc --closure 1"
+$HB_HOST_BIN/hbmk2 $* -gtnul cdemo.hbp -ocdemo.html -ldflag="--shell-file ./sokol/shell.html -sASSERTIONS=0 -sMALLOC=emmalloc --closure 1"
